*Added support to index.html for conditionally showing register or manage account depending on whether the use is logged in or not. *Added login page. *Fixed errors in HTML. *HTML5 and XML compliance, I think... *Created a user controller for AngularJS, deleted pointless old js file.

--- a/login.html
+++ b/login.html
@@ -46,8 +46,8 @@
 						</ul>
 					</li>
 					<!--ELSE
-                <li><a href="#">Register</a></li>
-                <END IF-->
+					<li><a href="#">Register</a></li>
+					<END IF-->
 				</ul>
 
 			</div>
@@ -58,30 +58,18 @@
 			<div class="col-md-12">
 				<form>
 					<fieldset>
-						<legend>Register</legend>
-						<div class="form-group">
-							<label for="inputGivenName">Given Name</label>
-							<input type="text" class="form-control" id="inputGivenName" placeholder="Firstname" required="required"/>
-						</div>
-						<div class="form-group">
-							<label for="inputSurname">Surname</label>
-							<input type="text" class="form-control" id="inputSurname" placeholder="Surname" required="required"/>
-						</div>
+						<legend>Login</legend>
 						<div class="form-group">
 							<label for="inputEmail">Email address</label>
-							<input type="email" class="form-control" id="inputEmail" placeholder="Email" required="required"/>
+							<input type="email" class="form-control" id="inputEmail" placeholder="Email" required="required" />
 						</div>
 						<div class="form-group">
 							<label for="inputPassword">Password</label>
-							<input type="password" class="form-control" id="inputPassword" placeholder="Password" required="required"/>
-						</div>
-						<div class="form-group">
-							<label for="inputPasswordConfirm">Password</label>
-							<input type="password" class="form-control" id="inputPasswordConfirm" placeholder="Re-enter Password" required="required"/>
+							<input type="password" class="form-control" id="inputPassword" placeholder="Password" required="required" />
 						</div>
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" required="required"/> I agree to the <a href="#">terms and conditions</a>.
+								<input type="checkbox" required="required" /> Remember my password.
 							</label>
 						</div>
 					</fieldset>
