--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="en" data-ng-app="bookXChange">
 
 <head>
-	<title>Book X-Change</title>
+	<title>Register | Book X-Change</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default" data-ng-controller="userController">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -26,28 +26,27 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Book Xchange</a>
+				<a class="navbar-brand" href="index.html">Book Xchange</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.php">Home<span class="sr-only">(current)</span></a></li>
-					<li><a href="buy.php">Buy</a></li>
-					<li><a href="sell.php">Sell</a></li>
+					<li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+					<li><a href="buy.html">Buy</a></li>
+					<li><a href="sell.html">Sell</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<!---IF LOGGED IN-->
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#NAME#<span class="caret"></span></a>
+					<li data-ng-show="user.authenticated" class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.firstname}}<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="account.php">My Account</a></li>
+							<li><a href="account.html">My Account</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="logout.php">Logout</a></li>
+							<li><a href="" data-ng-click="performLogout()">Logout</a></li>
 						</ul>
 					</li>
-					<!--ELSE
-                <li><a href="#">Register</a></li>
-                <END IF-->
+					<li data-ng-show="!user.authenticated"><a href="login.html">Login</a></li>
+					<li class="active" data-ng-show="!user.authenticated"><a href="register.html">Register</a></li>
 				</ul>
 
 			</div>
@@ -61,19 +60,23 @@
 						<legend>Register</legend>
 						<div class="form-group">
 							<label for="inputGivenName">Given Name</label>
-							<input type="text" class="form-control" id="inputGivenName" placeholder="Firstname" required="required"/>
+							<input type="text" class="form-control" id="inputGivenName" name="fname" placeholder="Firstname" required="required"/>
 						</div>
 						<div class="form-group">
 							<label for="inputSurname">Surname</label>
-							<input type="text" class="form-control" id="inputSurname" placeholder="Surname" required="required"/>
+							<input type="text" class="form-control" id="inputSurname" name="lname" placeholder="Surname" required="required"/>
 						</div>
 						<div class="form-group">
 							<label for="inputEmail">Email address</label>
-							<input type="email" class="form-control" id="inputEmail" placeholder="Email" required="required"/>
+							<input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email" required="required"/>
+						</div>
+						<div class="form-group">
+							<label for="inputEmail">Phone number</label>
+							<input type="tel" class="form-control" id="inputPhone" name="phone" placeholder="Phone" required="required"/>
 						</div>
 						<div class="form-group">
 							<label for="inputPassword">Password</label>
-							<input type="password" class="form-control" id="inputPassword" placeholder="Password" required="required"/>
+							<input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" required="required"/>
 						</div>
 						<div class="form-group">
 							<label for="inputPasswordConfirm">Password</label>
