--- a/account.html
+++ b/account.html
@@ -60,19 +60,13 @@
 					<table class="table">
 						<tbody>
 							<tr>
-								<th>Fullname</th>
-								<td>{{user.fullname}}</td>
-							</tr>
-<!--
-							<tr>
-								<th>First Name</th>
-								<td>{{user.firstname}}</td>
+								<th>Name</th>
+								<td>{{getFullname()}}</td>
 							</tr>
 							<tr>
-								<th>Last Name</th>
-								<td>{{user.surname}}</td>
+								<th>Student ID</th>
+								<td>{{user.studentID}}</td>
 							</tr>
--->
 							<tr>
 								<th>Email</th>
 								<td>{{user.email}}</td>
