--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
     <![endif]-->
 </head>
 
-<body>
-	<nav class="navbar navbar-default" data-ng-controller="userController">
+<body data-ng-controller="userController">
+	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -54,25 +54,26 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				<form>
+			<div class="col-md-12 well">
+				<form data-ng-init="loginuser = {email:'', password:''}">
 					<fieldset>
 						<legend>Login</legend>
 						<div class="form-group">
 							<label for="inputEmail">Email address</label>
-							<input type="email" class="form-control" id="inputEmail" placeholder="Email" required="required" />
+							<input type="email" class="form-control" id="inputEmail" data-ng-model="loginuser.email" placeholder="Email" required="required" />
 						</div>
 						<div class="form-group">
 							<label for="inputPassword">Password</label>
-							<input type="password" class="form-control" id="inputPassword" placeholder="Password" required="required" />
+							<input type="password" class="form-control" id="inputPassword" data-ng-model="loginuser.password" placeholder="Password" required="required" />
 						</div>
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" required="required" /> Remember my password.
+								<input type="checkbox" /> Remember my password.
 							</label>
 						</div>
+						<label data-ng-show="invalidPassword === true" class="text-danger">Invalid email or password.</label>
 					</fieldset>
-					<button type="submit" class="btn btn-default">Submit</button>
+					<button data-ng-click="loginUser(loginuser)" type="submit" class="btn btn-default">Submit</button>
 				</form>
 			</div>
 		</div>
