--- a/sell.html
+++ b/sell.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/angular.min.js"></script>
 	<script src="js/user.js"></script>
+	<script src="js/book.js"></script>
 	<!--	<link href="me.css" rel="stylesheet" />-->
 	<!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script> <script src="js/respond.min.js"></script>
@@ -52,10 +53,68 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container" data-ng-init="newbook = {}" data-ng-controller="bookController">
 		<div class="row">
-			<div class="col-md-12">
-				
+			<div class="col-md-12 well">
+				<form novalidate="novalidate">
+					<fieldset>
+						<legend>Sell</legend>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="title">Title</label>
+									<input type="text" class="form-control" id="title" name="title" data-ng-model="newbook.title" placeholder="Title" required="required" />
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<label for="publisher">Publisher</label>
+									<input type="text" class="form-control" id="publisher" name="publisher" data-ng-model="newbook.publisher" placeholder="Publisher" required="required" />
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<label for="author">Author</label>
+									<input type="text" class="form-control" id="author" name="author" data-ng-model="newbook.author" placeholder="Author" required="required" />
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-4">
+								<div class="form-group">
+									<label for="edition">Edition</label>
+									<input type="number" class="form-control" id="edition" name="edition" data-ng-model="newbook.edition" placeholder="Edition" required="required" />
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="form-group">
+									<label for="isbn">ISBN</label>
+									<input type="text" class="form-control" id="isbn" name="isbn" data-ng-model="newbook.isbn" placeholder="ISBN" required="required" />
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="form-group">
+									<label for="condition">Condition</label>
+									<input type="text" class="form-control" id="condition" name="condition" data-ng-model="newbook.condition" placeholder="Condition" required="required" />
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="comments">Comments</label>
+									<textarea class="form-control" id="comments" name="comments" data-ng-model="newbook.comments" placeholder="Enter a comment..." required="required"></textarea>
+								</div>
+							</div>
+						</div>
+						<div class="form-group pull-right">
+							<button class="btn btn-danger" type="reset">Reset</button>
+							<button data-ng-click="addBook(newbook)" class="btn btn-primary">Submit</button>
+						</div>
+					</fieldset>
+				</form>
 			</div>
 		</div>
 	</div>
