--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/angular.min.js"></script>
-	<script src="js/user.js"></script>
+	<script src="js/xchange.js"></script>
 	<!--	<link href="me.css" rel="stylesheet" />-->
 	<!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script> <script src="js/respond.min.js"></script>
