*Increase book title possible length to 255, as 30 is not quite adequate for many books. *Add Xchange class, seems tidier to manage compared to writing Xchange code in addbook.php, also may have problems since dbase is not abstract (can it be called directly without inheriting it, etc.). *Can obtain books via isbn. *readFromDbase will return false if the read is empty.

--- a/sell.html
+++ b/sell.html
@@ -62,7 +62,7 @@
 							<div class="col-md-12">
 								<div class="form-group">
 									<label for="title">Title</label>
-									<input type="text" class="form-control" id="title" name="title" data-ng-model="newbook.title" placeholder="Title" required="required" />
+									<input type="text" class="form-control" id="title" name="title" data-ng-model="newbook.title" placeholder="Title" required="required" value="1" />
 								</div>
 							</div>
 						</div>
@@ -70,13 +70,13 @@
 							<div class="col-md-6">
 								<div class="form-group">
 									<label for="publisher">Publisher</label>
-									<input type="text" class="form-control" id="publisher" name="publisher" data-ng-model="newbook.publisher" placeholder="Publisher" required="required" />
+									<input type="text" class="form-control" id="publisher" name="publisher" data-ng-model="newbook.publisher" placeholder="Publisher" required="required" value="1" />
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<label for="author">Author</label>
-									<input type="text" class="form-control" id="author" name="author" data-ng-model="newbook.author" placeholder="Author" required="required" />
+									<input type="text" class="form-control" id="author" name="author" data-ng-model="newbook.author" placeholder="Author" required="required" value="1" />
 								</div>
 							</div>
 						</div>
@@ -84,13 +84,13 @@
 							<div class="col-md-4">
 								<div class="form-group">
 									<label for="edition">Edition</label>
-									<input type="number" class="form-control" id="edition" name="edition" data-ng-model="newbook.edition" placeholder="Edition" required="required" />
+									<input type="number" class="form-control" id="edition" name="edition" data-ng-model="newbook.edition" placeholder="Edition" required="required" value="1" />
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="form-group">
 									<label for="isbn">ISBN</label>
-									<input type="text" class="form-control" id="isbn" name="isbn" data-ng-model="newbook.isbn" placeholder="ISBN" required="required" />
+									<input type="text" class="form-control" id="isbn" name="isbn" data-ng-model="newbook.isbn" placeholder="ISBN" required="required" value="12345"/>
 								</div>
 							</div>
 							<div class="col-md-4">
