--- a/login.html
+++ b/login.html
@@ -55,12 +55,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 well">
-				<form data-ng-init="loginuser = {email:'', password:''}">
+				<form data-ng-init="loginuser = {id:'', password:''}">
 					<fieldset>
 						<legend>Login</legend>
 						<div class="form-group">
-							<label for="inputEmail">Email address</label>
-							<input type="email" class="form-control" id="inputEmail" data-ng-model="loginuser.email" placeholder="Email" required="required" />
+							<label for="inputID">Student ID</label>
+							<input type="text" class="form-control" id="inputID" data-ng-model="loginuser.id" placeholder="Student ID" required="required" />
 						</div>
 						<div class="form-group">
 							<label for="inputPassword">Password</label>
@@ -71,7 +71,7 @@
 								<input type="checkbox" /> Remember my password.
 							</label>
 						</div>
-						<label data-ng-show="invalidPassword === true" class="text-danger">Invalid email or password.</label>
+						<label data-ng-show="showLoginError === true" class="text-danger">{{loginError}}</label>
 					</fieldset>
 					<button data-ng-click="loginUser(loginuser)" type="submit" class="btn btn-default">Submit</button>
 				</form>
