--- a/sell.html
+++ b/sell.html
@@ -6,7 +6,6 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
-	<link href="css/toastr.min.css" rel="stylesheet" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/angular.min.js"></script>
@@ -33,7 +32,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-					<li><a href="buy.html">Buy</a></li>
+					<li><a href="buy.html" data-ng-show="user.authenticated === true">Buy</a></li>
 					<li class="active"><a href="sell.html">Sell</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -54,7 +53,22 @@
 		</div>
 	</nav>
 	<div class="container" data-ng-init="newbook = {}" data-ng-controller="bookController">
-		<div class="row">
+		<div class="row" data-ng-show="user().authenticated === false">
+			<div class="col-md-12 well text-center">
+				<div>You must be registered and logged in to use this page.</div>
+				<div class="row">
+					<div class="col-md-2 col-md-offset-4">
+						<br>
+						<a href="login.html" class="btn btn-primary">Login</a>
+					</div>
+					<div class="col-md-2">
+						<br>
+						<a href="register.html" class="btn btn-success">Register</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row" data-ng-show="user().authenticated === true">
 			<div class="col-md-12 well">
 				<form novalidate="novalidate">
 					<fieldset>
@@ -91,16 +105,17 @@
 							<div class="col-md-4">
 								<div class="form-group">
 									<label for="isbn">ISBN</label>
-									<input type="text" class="form-control" id="isbn" name="isbn" data-ng-model="newbook.isbn" placeholder="ISBN" required="required" value="12345"/>
+									<input type="text" class="form-control" id="isbn" name="isbn" data-ng-model="newbook.isbn" placeholder="ISBN" required="required" value="12345" />
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="form-group">
 									<label for="condition">Condition</label>
-									<select class="form-control" data-ng-model="newbook.condition" data-ng-options="condition as condition.name for condition in conditions" data-ng-init="newbook.condition = conditions[0]" ></select>
+									<select class="form-control" data-ng-model="newbook.condition" id="condition" data-ng-options="condition as condition.name for condition in conditions" data-ng-init="newbook.condition = conditions[0]"></select>
 								</div>
 							</div>
 						</div>
+						<!--
 						<div class="row">
 							<div class="col-md-12">
 								<div class="form-group">
@@ -109,6 +124,7 @@
 								</div>
 							</div>
 						</div>
+-->
 						<div class="row">
 							<div class="col-md-12">
 								<label data-ng-show="showListingError === true" class="text-danger">{{listingMessage}}</label>
